pages/mesosphere/dcos/2.1/security/ent/tls-ssl/ar-custom/index.md
---
layout: layout.pug
navigationTitle:  Configuring a Custom External Certificate
title: Configuring a Custom External Certificate
menuWeight: 50
excerpt: Configuring DC/OS Enterprise to use a custom external certificate
beta: true
enterprise: true
render: mustache
model: /mesosphere/dcos/2.1/data.yml
---
<!-- The source repository for this topic is https://github.com/dcos/dcos-docs-site -->


External access to a DC/OS Enterprise cluster goes through Admin Router. By default, the certificate presented by Admin Router is signed by the DC/OS Certificate Authority. The default DC/OS CA certificate is not trusted by default, and requires clients to manually configure trust in the CA (e.g. by accepting a pop-up browser dialog). A trusted CA certificate can be provided using Custom CA Certificates. However, obtaining a suitable CA certificate can be difficult. Custom External Certificates allow the cluster administrator to provide an easily obtained certificate and key that Admin Router will present to external connections.

The benefits of using a custom external certificate for your DC/OS Enterprise cluster include:

- obtaining just a plain leaf certificate instead of an intermediate signing certificate and using custom CA certificate feature, in order to make connections to the cluster trusted by the clients by default (i.e. browser-trusted certificates)
- using a certificate with different properties for clients connecting to the cluster using given server names

# Contents
- [Supported certificates](#supported-ca-certificates)
- [Glossary](#glossary) for general definition of terms 
- [Requirements](#requirements)
- [Configuration parameter reference](#config-ref)
- [Installation walkthrough](#installing-dcos-enterprise-with-a-custom-ca-certificate). 
- [Example use cases](#example-use-cases) then provide example file contents for the custom external certificate configuration files for three popular use cases.

# Supported CA certificates
- Certificates with both RSA and ECC type keys are supported
- Custom external certificates are only supported for a fresh installation of DC/OS Enterprise 2.1 or later. Older versions of DC/OS are not supported. It is possible to add a custom external certificate during upgrade to 2.1.

# Glossary
- **Custom External certificate:** Your custom external certificate in PEM format, which will be used to access the cluster through Admin Router for the given set of server names. If necessary, it should include all the intermediate CA certificates up to the root CA certificate trusted by the clients. It is advised to not to include the final root CA certificate in the PEM file, but is not strictly necessary.

- **Server names:** A set of names which Admin Router will try matching to the Custom External certificate's Canonical Name and Subject Alternative Names. The server names can be one of:
  - plain hostname, e.g. example.com
  - ip address as a string, e.g. 1.2.3.4
  - a \* wildcard, e.g. \*.example.com, which will match all the subdomains of
    example.com (e.g. foo.example.com, bar.example.com), but not the domain
    itself - `example.com` and the sub-sub domains: foo.bar.example.com (or any
    deeper domains)
  - a \. wildcard with will match the same as \* wildcard plus the domain
    itself
  and cannot be one of:
  - master.mesos
  - leader.mesos
  - registry.component.thisdcos.directory

- **Private key associated with the custom external certificate:** The private key in the PKCS#8 format associated with the custom external certificate.

- **Installation directory:** The directory on the bootstrap node where the DC/OS installer resides. It is denoted with `$DCOS_INSTALL_DIR` in this document.

- **Configuration:** The set of the configuration parameters that governs the specific aspects of the installation procedure. The configuration is stored in the DC/OS configuration file.

- **DC/OS configuration file:** The file which contains the DC/OS configuration parameters. The DC/OS configuration file is normally called `config.yaml` and must be present in the `$DCOS_INSTALL_DIR/genconf/` directory on the bootstrap node during the installation. It is used by the DC/OS installer.


# Requirements

In order to install DC/OS Enterprise with a custom external certificate you will need:

- to use the [advanced DC/OS installation method](/mesosphere/dcos/2.1/installing/ent/custom/advanced/). Other installation methods are not supported.
- A file containing the custom external certificate.
- A file containing the private key associated with the custom external certificate.

## <a name="manually-placing-custom"></a>Manually placing custom external certificate


The custom external certificate and the associated private key must be put in the `$DCOS_INSTALL_DIR/genconf/` directory on the bootstrap node:

```bash
cd $DCOS_INSTALL_DIR
ls genconf/
```
```bash
external-certificate.crt
external-certificate-key.key
```

## <a name="manually-placing-master"></a>Manually placing the private key 


For security reasons, the installer will not copy the private key from the bootstrap node to the master nodes.
The private key associated with the custom external certificate must be distributed manually to every DC/OS master node **before starting the installation**.

The filesystem path for the private key file must be `/var/lib/dcos/pki/tls/private/adminrouter-external.key`.
The directory `/var/lib/dcos/pki/tls/private/` can be created manually with the following command before putting the file `adminrouter-external.key` in the directory on every DC/OS master node:

```bash
 mkdir -p /var/lib/dcos/pki/tls/private/
```

Furthermore, the file containing the private key `adminrouter-external.key` corresponding to the custom external certificate must be owned by the root Unix user and have 0600 permissions set.

If you copy the private key file over the network onto the master nodes, the network channel must be adequately protected. An example of copying the external certificate private key is given below. The commands are executed on the bootstrap node. The `W.X.Y.Z` below indicates the IP address of a master node:

```bash
cd $DCOS_INSTALL_DIR/genconf
scp external-certificate-key.key centos@W.X.Y.Z:/var/lib/dcos/pki/tls/private/adminrouter-external.key
```

## Specifying locations

The filesystem paths to the custom external certificate, associated private key and certificate chain files in the `$DCOS_INSTALL_DIR/genconf/` directory on the bootstrap node must be specified in the DC/OS configuration file using, respectively, the `external_certificate_path` and `external_certificate_key_path` parameters. The paths must be relative to `$DCOS_INSTALL_DIR`.

The [Example use cases](#example-use-cases) section below shows how to set these configuration parameters.

# <a name="config-ref"></a>Configuration parameter reference
## external\_certificate\_path
Path (relative to the `$DCOS_INSTALL_DIR`) to a file containing a single X.509 leaf certificate in the OpenSSL PEM format. For example: `genconf/external-certificate.crt`. If necessary, it should include all the intermediate CA certificates up to the root CA certificate trusted by the clients. It is advised to not to include the final root CA certificate in the PEM file, but is not strictly necessary.

If provided, this is the custom external certificate.  If not provided, the DC/OS cluster generates a unique leaf certificate during the initial bootstrap phase signed by DC/OS CA and presents it to the clients.

See the `external_certificate_validation_disable` parameter on the validation that the external certificate undergoes and how can it be overridden.

## external_certificate_key_path
Path (relative to the `$DCOS_INSTALL_DIR`) to a file containing the private key corresponding to the custom external certificate, encoded in the OpenSSL (PKCS#8) PEM format. For example: `genconf/external-certificate-key.key`.

This is highly sensitive data. The configuration processor accesses this file only for configuration validation purposes, and does not copy the data. After successful configuration validation this file needs to be placed out-of-band into the file system of all DC/OS master nodes to the path `/var/lib/dcos/pki/tls/private/adminrouter-external.key` before most DC/OS `systemd` units start up. The file must be readable by the root user, and should have have 0600 permissions set.

This path is required if `external_certificate_path` is specified.

## external_certificate_servernames

The list of server names that clients can use while accessing the cluster in
order to make Admin Router present the custom external certificate to the
client. The server names can be one of:
  - plain hostname, e.g. example.com
  - ip address as a string, e.g. 1.2.3.4
  - a \* wildcard, e.g. \*.example.com, which will match all the subdomains of
    example.com (e.g. foo.example.com, bar.example.com), but not the domain
    itself - `example.com` and the sub-sub domains: foo.bar.example.com (or any
    deeper domains)
  - a \. wildcard with will match the same as \* wildcard plus the domain
    itself
  and cannot be one of:
  - master.mesos
  - leader.mesos
  - registry.component.thisdcos.directory

Additionally, every server name must be present in the custom external
certificate's Canonical Name or Subject Alternative Names.

This option is required if `external_certificate_path` is specified.

## external_certificate_validation_disable
The custom external certificate undergoes validation before being taken into
consideration. Namely:
    * the restrictions for server names mentioned for
      `external_certificate_servernames` parameter
    * certificate key must be of type RSA or ECC
    * minimum size of an RSA key is 2048
    * minimum size of the ECC key is 256
    * the ECC's key curve must be one of SECP256R1 or SECP384R1,
    * key usage extension must be defined
    * the validity period of the certificate must not start in the future
    * the validity period of the certificate must not end sooner than in 365
      days
    * the basic constraints are not required, but if they are defined, they
      should not have the CA flag set
    * key usage extension must have the digital signature and key encipherment
      extensions set
    * extended key usage extension must be present and tls server
      authentication flag must be set

Additionally, if the certificate chain is present in the external
certificate's PEM, the chain itself must:
* start with the leaf certificate and be followed by intermediate CAs each one
  signing it predecessor and being signed by it's successor
* each intermediate CA cert must be a valid CA cert (expiration, etc...)

In case when these restrictions are too strict, user can override them, by
setting the `external_certificate_validation_disable` to false

# Installing DC/OS Enterprise with a custom external certificate

**Prerequisites**:

- The installation of DC/OS Enterprise via the Advanced Installer has been prepared according to the corresponding [documentation](/mesosphere/dcos/2.1/installing/production/deploying-dcos/installation/), up to the section [**Install DC/OS**](/mesosphere/dcos/2.1/installing/production/deploying-dcos/installation/#install-dcos) of that documentation.

- On the bootstrap node, the files carrying the custom external certificate, and the associated private ke have been placed into the `$DCOS_INSTALL_DIR/genconf/` directory. (See the [section](#manually-placing-custom) above for more detailed description)

- The private key associated with the custom external certificate has been securely placed on all DC/OS master nodes (See this [section](#manually-placing-master) for more details). Example of a command issued on one of the DC/OS master nodes:

```bash
stat /var/lib/dcos/pki/tls/private/adminrouter-external.key
```
```bash
File: ‘/var/lib/dcos/pki/tls/private/adminrouter-external.key’
Size: 9             Blocks: 8          IO Block: 4096   regular file
Device: ca01h/51713d    Inode: 100671105   Links: 1
Access: (0600/-rw-------)  Uid: (    0/    root)   Gid: (    0/    root)
Context: unconfined_u:object_r:var_lib_t:s0
Access: 2017-12-27 12:35:58.643278377 +0000
Modify: 2017-12-27 12:35:58.643278377 +0000
Change: 2017-12-27 12:36:13.019162417 +0000
Birth: -
```

- The configuration parameters `external_certificate_path`, `external_certificate_key_path` and `external_certificate_servernames` are specified in the DC/OS configuration file `$DCOS_INSTALL_DIR/genconf/config.yaml` and point to the relevant locations in the file system. Example of commands issued on the bootstrap node:

```bash
cd $DCOS_INSTALL_DIR
cat genconf/config.yaml
```
```bash
[...]
external_certificate_path: genconf/external-certificate.crt
external_certificate_key_path: genconf/external-certificate-key.key
external_certificate_servernames:
  - foo.example.com
  - bar.bazz.org
  - .foo.com
  - *.gro.zoo
[...]
```

## Installation
Proceed with the installation as described in the [documentation of the Advanced Installer](/mesosphere/dcos/2.1/installing/production/deploying-dcos/installation/#install-dcos). Note that the current working directory when executing `dcos_generate_config.ee.sh` must be the `$DCOS_INSTALL_DIR` directory.

## Verify installation
One method for verifying that the DC/OS Enterprise cluster was installed properly with the custom external certificate is to initiate a TLS connection to Admin Router which, after installation, will present the custom external certificate for the configured server names. In order to do this, specify a server name in the request that will match one of the entries in `external_certificate_servernames`.

Provided that you have a CA certificate signed signed external certificate/external certificate intermediate chain, the following command can be executed:

```bash
openssl s_client -connect <public_ip_master_node_X>:443 -showcerts -servername <one of configured server names> -verifyCAfile <path to the CA file that signed external certificate/external certificate intermediate chain>  | grep -e "s:" -e "i:" -e "return code:" | grep -e "s:" -e "i:" -e "return code:"
```

The output should look like the following:

```bash
depth=4 C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Root CA
verify return:1
depth=3 C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 0
verify return:1
depth=2 C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 1
verify return:1
depth=1 C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 2
verify return:1
depth=0 C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Leaf Certificate
verify return:1
 0 s:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Leaf Certificate
   i:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 2
 1 s:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 2
   i:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 1
 2 s:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 1
   i:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 0
 3 s:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Intermediate CA 0
   i:C = US, ST = CA, L = San Francisco, O = "Mesosphere, Inc.", CN = Root CA
    Verify return code: 0 (ok)
```
